<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FareTable">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/districts"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RadioGroup
            android:id="@+id/radioGroup_fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_fare"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selectorradiostyle"
                android:button="@null"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:text="@string/trivandrum"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton2_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/kollam" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton3_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/alappuzha" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton4_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/pathanamthitta" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton5_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/kottayam" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton6_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/idukki" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton7_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="20dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/ernakulam" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton8_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/thrissur" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton9_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/palakkad" />
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton10_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/malappuram" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton11_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="20dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/kozhikode" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton12_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="28dp"
                android:paddingRight="28dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/wayanadu" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioButton13_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/selectorradiostyle"
                android:textColorLink="@color/colorButtonText"
                android:text="@string/kannur" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/radioButton14_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/selectorradiostyle"
                android:text="@string/kasaragod" />

        </RadioGroup>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/fare_table"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center|start"
            android:textColor="@color/black_overlay"
            android:text="Min. Distance Cover"/>

        <EditText
            android:id="@+id/distanceForMinCharge"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:padding="15dp"
            android:inputType="numberDecimal"
            android:background="@drawable/edittextstyle"
            android:hint="   distance in KM   "/>
    </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center|start"
                android:textColor="@color/black_overlay"
                android:text="Minimum Charge"/>

            <EditText
                android:id="@+id/minimumCharge"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="numberDecimal"
                android:textSize="15sp"
                android:padding="15dp"
                android:background="@drawable/edittextstyle"
                android:hint="amount in rupees"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center|start"
                android:textColor="@color/black_overlay"
                android:text="Added Charge"/>

            <EditText
                android:id="@+id/addedCharge"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:padding="15dp"
                android:inputType="numberDecimal"
                android:background="@drawable/edittextstyle"
                android:hint="amount in rupees"/>
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/textColor"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="Save"/>
</LinearLayout>